:bug: Fix error on article hover not showing mouse pointer

--- a/src/styles/components/_article.css
+++ b/src/styles/components/_article.css
@@ -1,5 +1,5 @@
 .article {
-  @apply col-span-full grid grid-cols-12 gap-2.5 items-start md:items-center transition duration-200 ease-in-out;
+  @apply col-span-full grid grid-cols-12 gap-2.5 items-start md:items-center transition duration-200 ease-in-out cursor-pointer;
 
   .image {
     @apply col-start-2 col-span-4 pr-5 md:col-start-4 md:col-span-2 md:pr-5;
